# hatch-multi

./: .buildinfo  .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/.github/ISSUE_TEMPLATE/: bug_report.doctree  feature_request.doctree  question.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/hatch_multi/: index.doctree
.doctrees/autoapi/project/: index.doctree
.doctrees/autoapi/test_projects/: index.doctree
.doctrees/autoapi/test_projects_basic/: index.doctree
.doctrees/autoapi/test_projects_multiple_primary/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  docs.yaml
_modules/: index.html
_modules/hatch_multi/: hooks.html  plugin.html  structs.html
_sources/: index.md.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/hatch_multi/: index.html
autoapi/project/: index.html
autoapi/test_projects/: index.html
autoapi/test_projects_basic/: index.html
autoapi/test_projects_multiple_primary/: index.html
autoapi/test_structs/: index.html
hatch_multi/: __init__.py  hooks.py  plugin.py  structs.py
hatch_multi/tests/: test_projects.py  test_projects_basic.py  test_projects_multiple_primary.py  test_structs.py
hatch_multi/tests/test_project_basic/: pyproject.toml
(+18 files in other folders)
